# vandelay-ai

./: .gitignore  README.md
.github/workflows/: graph-ingestion.yaml  vector-ingestion.yaml
data_ingestion/: README.md  __init__.py  agent_cypher_queries.md  agent_instructions.yaml  config.yaml  config_loader.py  git_data_source.py  ingest_graph.py  ingest_migration_graph.py  ingest_migration_vector.py  ingest_vector.py  run_cypher.py  standalone_ingest.py  standalone_requirements.txt  test_ingestion.py  verify_connection.py
data_ingestion/data/: fsi_sample_data.cypher  (+1 more)
mcp_servers/: __init__.py
openshift/: local-stack.template.yaml
vandelay_migration/: .dockerignore  Dockerfile  README.md  __init__.py  agent.py  config.yaml  config_loader.py  migration_graph_agent.py  migration_tools.py  migration_vector_agent.py  orchestrator.py  pyproject.toml  service_request_agent.py
vandelay_search/: .dockerignore  Dockerfile  README.md  __init__.py  agent.py  app.py  callbacks.py  config.yaml  config_loader.py  event_handler.py  memory_config.py  orchestrator.py  pyproject.toml  state_manager.py
vandelay_search/plugins/: __init__.py  guardrails_plugin.py  logging_plugin.py  metrics_plugin.py  neo4j_lifecycle_plugin.py
vandelay_search/sub_agents/: __init__.py
vandelay_search/sub_agents/answer_critic/: __init__.py  agent.py  tools.py
vandelay_search/sub_agents/cypher_expert/: __init__.py  agent.py  tools.py
vandelay_search/sub_agents/graph_query/: __init__.py  agent.py  tools.py
vandelay_search/sub_agents/vector_search/: __init__.py  agent.py  tools.py
(+63 files in other folders)
